--- a/gamma/src/estilos/notas.css
+++ b/gamma/src/estilos/notas.css
@@ -25,12 +25,12 @@ section.login {
     width: 150px;
 }
 .login-form {
-    width: 400px;
+    width: 350px;
     padding: 30px;
     background-color: #ffffff;
     box-shadow: 0px 0px 10px 0px #00000020;
     border-radius: 10px;
-    text-align: center;
+    text-align: center; /* Centrar contenido horizontalmente */
     display: flex;
     justify-content: center;
     align-items: center;
